Source/WebCore/rendering/RenderBlock.h
@@ -129,6 +129,8 @@ public:
     LayoutUnit logicalRightOffsetForLine(LayoutUnit position, bool firstLine) const { return logicalRightOffsetForLine(position, logicalRightOffsetForContent(), firstLine); }
     LayoutUnit logicalLeftOffsetForLine(LayoutUnit position, bool firstLine) const { return logicalLeftOffsetForLine(position, logicalLeftOffsetForContent(), firstLine); }
     LayoutUnit startOffsetForLine(LayoutUnit position, bool firstLine) const { return style()->isLeftToRightDirection() ? logicalLeftOffsetForLine(position, firstLine) : logicalRightOffsetForLine(position, firstLine); }
+    LayoutUnit startAlignedOffsetForLine(LayoutUnit position, bool firstLine);
+    LayoutUnit startAlignedOffsetForBlock(LayoutUnit position, bool firstLine);
 
     virtual VisiblePosition positionForPoint(const LayoutPoint&);
     
@@ -221,6 +223,8 @@ public:
     void setMarginAfterForChild(RenderBox* child, LayoutUnit);
     LayoutUnit collapsedMarginBeforeForChild(RenderBox* child) const;
     LayoutUnit collapsedMarginAfterForChild(RenderBox* child) const;
+
+    void updateLogicalWidthForAlignment(const ETextAlign&, BidiRun* trailingSpaceRun, float& logicalLeft, float& totalLogicalWidth, float& availableLogicalWidth, int expansionOpportunityCount);
 
     virtual void updateFirstLetter();
 
